--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,11 @@ body { background-color: #dedede}
 
 main { padding-top:100px; }
 
+.about-1 { background-color:white; padding:30px;border-radius: 5px; }
+.about-2 { border-bottom: 2px solid gray; margin-bottom:20px; }
+.about-3 { text-align:center; float:none; margin:auto; }
+.about-4 { width:100%; }
+
 .sticky-nav {
     position: fixed;
     width: 100%;
