--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -59,5 +59,5 @@ main { padding-top:100px; }
 #scroll_to_top:hover { opacity: 0.75; }
 .scrollToTop { display: none; font-weight: bold; height: auto; padding: 0; position: fixed; right: 45px; text-align: center; text-decoration: none; top: 91%; width: auto; background-color: #000; z-index: 555; border-radius:2px; }
 .scrollToTop i { font-size: 18px; margin: 0 6px; color: #fff; }
-.scrollToTop:hover { opacity: 0.5; }
+.scrollToTop:hover { opacity: 0.5; cursor: pointer; }
 .scrollToTop:hover i { position: relative; }
