--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,23 +1,18 @@
 
+/* General website selectors & classes */
 body { background-color: #dedede}
-
 main { padding-top:100px; }
+.center-col { margin:auto; float:none; }
 
-.about-1 { background-color:white; padding:30px;border-radius: 5px; }
-.about-2 { border-bottom: 2px solid gray; margin-bottom:20px; }
-.about-3 { text-align:center; float:none; margin:auto; }
-.about-4 { width:100%; }
-.center-col { float:none; margin:auto; }
-.p-no-margin-bot p {margin-bottom:0px;}
-.footer-justify {color: white; position:absolute; bottom:0; justify-content:center;}
-.footer-padding {padding: 5px 0;}
-
+/* Nav classes */
+.nav-image {height:40px;}
 .sticky-nav {
     position: fixed;
     width: 100%;
     z-index: 99;
 }
 
+/* Header classes */
 .header-image {
     height: 800px;
     width: 100%;
@@ -27,11 +22,13 @@ main { padding-top:100px; }
     background-position: center;
     /* box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.47) */
 }
-
-.header-gradient { background: linear-gradient(rgba(0,38,67,0),rgba(0,38,67,0.9)); background: -webkit-linear-gradient(rgba(0,38,67,1), rgba(0,38,67,0.6), rgba(0,38,67,0)); background: -o-linear-gradient(rgba(0,38,67,0),rgba(0,38,67,0.8)); background: -moz-linear-gradient(rgba(51,51,51,0),rgba(51,51,51,0.8)); height:600px;  }
-
-.center-col { margin:auto; float:none; }
-
+.header-gradient {
+    background: linear-gradient(rgba(0,38,67,0),rgba(0,38,67,0.9)); 
+    background: -webkit-linear-gradient(rgba(0,38,67,1), rgba(0,38,67,0.6), rgba(0,38,67,0)); 
+    background: -o-linear-gradient(rgba(0,38,67,0),rgba(0,38,67,0.8)); 
+    background: -moz-linear-gradient(rgba(51,51,51,0),rgba(51,51,51,0.8)); 
+    height:600px;
+}
 .header-1 {
     text-align: center;
     font-size: 24px;
@@ -51,13 +48,46 @@ main { padding-top:100px; }
     font-size: 1.5rem;
  }
 
- /* ===================================
-    Scroll to top
-====================================== */
+/* Page-specific styling classes */
+.about-1 { background-color:white; padding:30px;border-radius: 5px; }
+.about-2 { border-bottom: 2px solid gray; margin-bottom:20px; }
+.about-3 { text-align:center; float:none; margin:auto; }
+.about-4 { width:100%; }
+.center-col { float:none; margin:auto; }
+.p-no-margin-bot p {margin-bottom:0px;}
+.footer-justify {
+    color: white;
+    position:absolute;
+    bottom:0;
+    justify-content:center;
+}
+.footer-padding {padding: 5px 0;}
+.banner-1 {position: absolute;bottom: 0;}
+.banner-2 {
+    padding:10px; 
+    background-color:rgba(47, 80, 107, 0.6901960784313725); 
+    text-align:center; 
+    color:white;
+}
 
+ /* Scroll to top */
 #scroll_to_top { cursor: pointer; }
 #scroll_to_top:hover { opacity: 0.75; }
-.scrollToTop { display: none; font-weight: bold; height: auto; padding: 0; position: fixed; right: 45px; text-align: center; text-decoration: none; top: 91%; width: auto; background-color: #000; z-index: 555; border-radius:2px; }
+.scrollToTop {
+    display:block;
+    font-weight:bold;
+    height:auto;
+    padding:0;
+    position:fixed;
+    right:45px;
+    text-align:center;
+    text-decoration:none;
+    top:91%;
+    width:auto;
+    background-color: #000;
+    z-index:555;
+    border-radius:2px;
+}
 .scrollToTop i { font-size: 18px; margin: 0 6px; color: #fff; }
 .scrollToTop:hover { opacity: 0.5; cursor: pointer; }
-.scrollToTop:hover i { position: relative; }
+/* .scrollToTop:hover i { position: relative; } */
