--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,6 +48,8 @@ main { padding-top:100px; }
     font-size: 1.5rem;
  }
 
+ .main-1 { padding-bottom:100px;}
+
 /* Page-specific styling classes */
 .about-1 { background-color:white; padding:30px;border-radius: 5px; }
 .about-2 { border-bottom: 2px solid gray; margin-bottom:20px; }
@@ -69,6 +71,9 @@ main { padding-top:100px; }
     text-align:center; 
     color:white;
 }
+
+/* Footer */
+.footer-1 {position:fixed;}
 
  /* Scroll to top */
 #scroll_to_top { cursor: pointer; }
